[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Enemies/Mushman.gd" type="Script" id=1]
[ext_resource path="res://Assets/Monster_Creatures_Fantasy(Version 1.3)/Mushroom/Idle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Monster_Creatures_Fantasy(Version 1.3)/Mushroom/Run.png" type="Texture" id=3]
[ext_resource path="res://Assets/Monster_Creatures_Fantasy(Version 1.3)/Mushroom/Attack.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15, 20 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 20 )

[sub_resource type="Animation" id=2]
resource_name = "Attack"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hit"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Move"
length = 0.74
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Move:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 50, 30 )

[node name="Mushman" type="KinematicBody2D"]
collision_layer = 12
script = ExtResource( 1 )

[node name="Idle" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4

[node name="Move" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 8
frame = 1

[node name="Attack" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 1 )
texture = ExtResource( 4 )
hframes = 8
frame = 5

[node name="Area2D" type="Area2D" parent="Attack"]
position = Vector2( 0, -1 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack/Area2D"]
modulate = Color( 0.529412, 0.0745098, 0.0745098, 1 )
self_modulate = Color( 0.682353, 0.0392157, 0.0392157, 1 )
position = Vector2( 25, 7 )
shape = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Idle = SubResource( 4 )
anims/Move = SubResource( 3 )

[node name="Dormant" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 6 )

[node name="Action" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Dormant" to="." method="_on_Dormant_timeout"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="timeout" from="Action" to="." method="_on_Action_timeout"]
